#32 - Fixing weapon touch control position on mobile

--- a/client/src/styles/overlays/ui/weapon_controls.styl
+++ b/client/src/styles/overlays/ui/weapon_controls.styl
@@ -1,7 +1,8 @@
 #weapon_controls {
     display: none;
+    width: 100%
     bottom: 8px;
-    right: 180px;
+    justify-content: center;
     z-index: 2;
 
     div.label {
@@ -82,5 +83,13 @@
 
     .slider.round:before {
         border-radius: 50%;
+    }
+}
+
+@media screen and ( min-width 640px ) {
+    #weapon_controls {
+        justify-content: inherit;
+        right: 180px;
+        width: inherit;
     }
 }
